Refactor registration form and update comments

--- a/register.html
+++ b/register.html
@@ -13,19 +13,11 @@
     <section class="card">
       <!-- Left panel -->
       <aside class="left">
-
-        <!-- Background video -->
-        <video
-          id="bgVideo"
-          class="bgvid"
-          src="assets/video.mp4"
-          muted
-          loop
-          playsinline>
-        </video>
+        <!-- Video -->
+        <video id="bgVideo" class="bgvid" src="assets/video.mp4" muted loop playsinline preload="auto"> </video>
         <div class="left-overlay"></div>
 
-        <!-- Login/Register navigation -->
+        <!-- Login/Register toggle -->
         <div class="auth-toggle" data-active="register">
           <div class="toggle-indicator"></div>
           <a class="toggle-item" data-target="login" href="login.html">Login</a>
@@ -45,39 +37,36 @@
         <h1 class="title">Create Account</h1>
         <p class="subtitle">enter your details to register</p>
 
-        <!-- Registration form -->
+        <!-- Register Form-->
         <form id="authForm" data-mode="register" class="form" novalidate>
 
-          <!-- Name field -->
+          <!-- Name -->
           <label class="field">
             <span class="label">Name</span>
-            <input name="name" type="text" required>
+            <input name="name" class="input" type="text" required>
           </label>
 
-          <!-- Email field -->
+          <!-- Email -->
           <label class="field">
             <span class="label">Email</span>
-            <input name="email" type="email" required>
+            <input name="email" class="input" type="email" required>
           </label>
 
-          <!-- Password field -->
+          <!-- Password -->
           <label class="field">
             <span class="label">Password</span>
             <div class="pw-wrap">
-              <input id="password" name="password" type="password" required>
+              <input name="password" class="input" type="password" required> 
 
-              <!-- Show/Hide password -->
-              <img
-                id="togglePw"
-                class="eye-icon"
-                src="assets/show_pass.png"
-                alt="Show password">
+              <!-- Eye Icon-->
+              <img id="togglePw" class="eye-icon" src="assets/show_pass.png" alt="Show password">
             </div>
           </label>
 
           <!-- Submit button -->
           <button class="btn" type="submit">Register</button>
           <p class="msg" id="authMsg"></p>
+          
         </form>
       </section>
     </section>
@@ -86,6 +75,6 @@
   <script src="js/data.js"></script>
   <script src="js/common.js"></script>
   <script src="js/auth.js"></script>
-  
+
 </body>
 </html>
