--- a/login.html
+++ b/login.html
@@ -67,7 +67,7 @@
           <!-- Submit button -->
           <button class="btn" type="submit">Sign In</button>
           <p class="msg" id="authMsg"></p>
-          
+
         </form>
       </section>
     </section>
@@ -76,6 +76,7 @@
   <script src="js/data.js"></script>
   <script src="js/common.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/page-transition.js"></script>
 
 </body>
 </html>
