--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
           <!-- Submit button -->
           <button class="btn" type="submit">Register</button>
           <p class="msg" id="authMsg"></p>
-          
+
         </form>
       </section>
     </section>
@@ -75,6 +75,7 @@
   <script src="js/data.js"></script>
   <script src="js/common.js"></script>
   <script src="js/auth.js"></script>
+  <script src="js/page-transition.js"></script>
 
 </body>
 </html>
