--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archer's Forum | Login</title>
   <link rel="icon" href="assets/logo_3.png">
-  <link rel="stylesheet" href="css/login.css" />
+  <link rel="stylesheet" href="css/login_register.css" />
 </head>
 
 <body>
