--- a/register.html
+++ b/register.html
@@ -74,7 +74,7 @@
 
   <script src="js/data.js"></script>
   <script src="js/common.js"></script>
-  <script src="js/auth.js"></script>
+  <script src="js/login_register.js"></script>
   <script src="js/page-transition.js"></script>
 
 </body>
