--- a/mainpage.html
+++ b/mainpage.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archer's Forum | Main Page</title>
-  <link rel="icon" href="assets/logo_3.png">
-  <link rel="stylesheet" href="css/login_register.css" />
+  <link rel="icon" href="assets/logo_3.png" />
+  <link rel="stylesheet" href="main_page.css" />
 </head>
 <body>
 
