--- a/login.html
+++ b/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archer's Forum | Login</title>
   <link rel="icon" href="assets/logo_3.png">
-  <link rel="stylesheet" href="css/login_register.css" />
+  <link rel="stylesheet" href="login_register.css" />
 </head>
 
 <body>
@@ -15,14 +16,7 @@
       <aside class="left">
 
         <!-- Video -->
-        <video
-          id="bgVideo"
-          class="bgvid"
-          src="assets/video.mp4"
-          muted
-          loop
-          playsinline
-          preload="auto">
+        <video id="bgVideo" class="bgvid" src="assets/video.mp4" muted loop playsinline preload="auto">
         </video>
         <div class="left-overlay"></div>
 
@@ -44,7 +38,7 @@
 
         <!-- Page heading -->
         <h1 class="title">Welcome Back</h1>
-        <p class="subtitle">enter your email and password to login</p>
+        <p class="subtitle">Enter your email and password to login</p>
 
         <!-- Login form -->
         <form id="authForm" data-mode="login" class="form" novalidate>
@@ -73,8 +67,8 @@
     </section>
   </main>
 
-  <script src="js/common.js"></script>
-  <script src="js/login_register.js"></script>
+  <script src="login_register.js"></script>
 
 </body>
+
 </html>
