--- a/register.html
+++ b/register.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Archer's Forum | Register</title>
   <link rel="icon" href="assets/logo_3.png">
-  <link rel="stylesheet" href="css/login_register.css" />
+  <link rel="stylesheet" href="login_register.css" />
 </head>
 
 <body>
@@ -35,7 +36,7 @@
 
         <!-- Page heading -->
         <h1 class="title">Create Account</h1>
-        <p class="subtitle">enter your details to register</p>
+        <p class="subtitle">Enter your details to register</p>
 
         <!-- Register Form-->
         <form id="authForm" data-mode="register" class="form" novalidate>
@@ -56,7 +57,7 @@
           <label class="field">
             <span class="label">Password</span>
             <div class="pw-wrap">
-              <input name="password" class="input" type="password" required> 
+              <input name="password" class="input" type="password" required>
 
               <!-- Eye Icon-->
               <img id="togglePw" class="eye-icon" src="assets/show_pass.png" alt="Show password">
@@ -72,8 +73,8 @@
     </section>
   </main>
 
-  <script src="js/common.js"></script>
-  <script src="js/login_register.js"></script>
+  <script src="login_register.js"></script>
 
 </body>
+
 </html>
