--- a/mainpage.html
+++ b/mainpage.html
@@ -34,9 +34,14 @@
     </div>
 
     <div class="header-right">
-      <a class="profile-link" id="profileLink" href="profile.html" title="View Profile">
-        <img class="user-avatar-img" src="assets/profile.png" alt="User" />
-        <span class="user-name">User</span>
+      <a class="profile-link" id="profileLink" href="profile.html">
+        <img
+          id="headerAvatar"
+          class="user-avatar-img"
+          src="assets/default_pfp.png"
+          alt="User avatar"
+        />
+        <span class="user-name" id="headerUserName">User</span>
       </a>
       <button class="btn-logout" type="button">Logout</button>
     </div>
