--- a/mainpage.html
+++ b/mainpage.html
@@ -34,6 +34,10 @@
     </div>
 
     <div class="header-right">
+      <label class="theme-switch" for="checkbox">
+        <input type="checkbox" id="checkbox" />
+        <div class="slider"></div>
+      </label>
       <a class="profile-link" id="profileLink" href="profile.html">
         <img
           id="headerAvatar"
