Change comment button to 'Post Comment' and type

--- a/mainpage.html
+++ b/mainpage.html
@@ -218,7 +218,7 @@
         <form id="commentForm" class="comment-form">
           <textarea id="commentText" rows="3" placeholder="Write a comment..." required></textarea>
           <div class="comment-actions">
-            <button class="btn-primary" type="submit">Comment</button>
+            <button id="submitCommentBtn" class="btn-primary" type="button">Post Comment</button>
           </div>
         </form>
 
