--- a/profile.html
+++ b/profile.html
@@ -215,7 +215,7 @@
             <div class="form-row">
               <div class="form-group">
                 <label for="firstName">First Name</label>
-                <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" />
+                <input type="text" id="firstName" name="firstName" placeholder="Enter your first name" required />
               </div>
               <div class="form-group">
                 <label for="lastName">Last Name</label>
@@ -243,3 +243,5 @@
   <script src="profile.js"></script>
 </body>
 </html>
+
+
