--- a/login.html
+++ b/login.html
@@ -61,7 +61,11 @@
           <!-- Submit button -->
           <button class="btn" type="submit">Sign In</button>
           <p class="msg" id="authMsg"></p>
+          <div class="demo-account">
 
+          <p>Demo Account</p>
+          <p><strong>demo@archersforum.com</strong> / <strong>demo1234</strong></p>
+          </div>
         </form>
       </section>
     </section>
